# fdtd

./: README  makefile  pyproject.toml  tasks.py
docs/source/: conf.py  examples.rst  index.rst  installation.rst
src/fd1d/: main.py  sources.c  sources.h
src/fdtd/: main.py  simulation.c  sources.c  sources.h
